1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* tclObjc.m (tclObjc_msgSendToClientData): Initialize argnum to zero
	to avoid warning on Irix.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* tclObjc.m: Don't declare strchr.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libtclobjc_la_LIBADD), tclObjc.m: 
	Always ignore objc-malloc.

	* Makefile.am (INCLUDES): Include -I for libobjc.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (OBJCFLAGS): Use @CFLAGS_NOWARN_IMPLICIT_INT@
	instead of -Wno-implicit-int.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (REVISION): Bump.  Version 1.4.1.

1999-02-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (TCL_LIBRARY, TK_LIBRARY): Don't compute from
	t{cl,k}Config.sh file.  Get value from autoconf substitution.

1999-01-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TkInterp.m: Use __CYGWIN__ instead of __CYGWIN32__.

	* tclObjc.m (BUGGY_BUILTIN_APPLY): Set if __CYGWIN__. 

1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* TclInterp.m ([TclInterp -checkPath:subdirectory:file:]): Add
	subdirectory argument.
	([TclInterp -checkPath:subdirectory:file:]): Don't append / if
	there already is one, and return path (sans filename) in case of
	success.

	* T{cl,k}Interp.m ([T{cl,k}Interp -checkT{cl,k}Library]): Use above
	and secondaryPath as base for t{cl,k}8.0 instead of as an explicit
	path.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT, AGE): Bump.  Clear revision.

1999-01-07  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (tcllibdir): Substitute.
	(TCL_VERSION): Extract from tclConfig.sh.
	(TCL_PREFIX): Extract from tclConfig.sh.
	(TCL_LIBRARY): Set to $(TCLPREFIX)/lib/tcl$(TCL_VERSION).
	(CPPFLAGS): Define TCL_LIBRARY.

	* TclInterp.m (checkLibrary): Default to TCL_LIBRARY cpp symbol
	if tcl_library is not set.
