@@ -32,8 +32,7 @@
 #endif
 #include <tk.h>
 #include "tclObjc.h"
-#include <unistd.h>
-#include <stdlib.h>
+#include <misc.h>
 
 #define DEFAULT_PROMPT "Tk% "
 #define DEFAULT_PARTIAL_PROMPT "Tk> "
