@@ -1,3 +1,15 @@
+1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* tclObjc.m: Undef PACKAGE and VERSION after inclusion of ffi.h.
+	Include misc.h instead of stdlib.h and string.h.
+
+	* TkInterp.m: Include misc.h instead of unistd.h and stdlib.h.
+
+	* TclInterp.m: Include misc.h instead of stdio.h, stdarg.h,
+	string.h, stdlib.h, and unistd.h.
+
+	* List.m: Include misc.h instead of stdlib.h.
+
 1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* tclObjc.m (tclObjc_msgSendToClientData): Initialize argnum to zero
